feat: learning how to pixel perfect translate figma to css

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <div class="hero-section">
       <div class="left">
         <h1>Find Your New Bestie</h1>
-        <h1>
-          <p>The most amazing list of adoptable pets at your fingertips. Updated fresh daily.
-            <p />
-            <button class="btn-primary">View Pets</button>
-            <button class="btn-outline">Manage Pets</button>
+        <p>The most amazing list of adoptable pets at your fingertips. Updated fresh daily.
+          <p />
+        <div class="btn-container">
+          <a href="#" class="btn-primary">View Pets</a>
+          <a href="#" class="btn-outline">Manage Pets</a>
+        </div>
       </div>
       <div class="right">
       </div>
