--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       <div class="right">
       </div>
     </div>
+    <div class="pets-section">
+      <h2>Meet Our Friends</h2>
+    </div>
+    <footer>
+      <p> © 2023 Fake Adoption Center. All rights reserved.</p>
+    </footer>
   </div>
 
 </body>
