--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-top">
     <div class="hero-section">
       <div class="left">
         <h1>Find Your New Bestie</h1>
@@ -31,12 +31,14 @@
       <div class="right">
       </div>
     </div>
-    <div class="pets-section">
-      <h2>Meet Our Friends</h2>
-    </div>
-    <footer>
-      <p> © 2023 Fake Adoption Center. All rights reserved.</p>
-    </footer>
+  </div>
+  <div class="container-bottom">
+  <div class="pets-section">
+    <h2>Meet Our Friends</h2>
+  </div>
+  <footer>
+    <p> © 2023 Fake Adoption Center. All rights reserved.</p>
+  </footer>
   </div>
 
 </body>
