fix: corrected the max width and color for each section

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 <body>
   <div class="container-top">
-    <div class="hero-section">
+    <div class="hero-section max-width padding-lg center">
       <div class="left">
         <h1>Find Your New Bestie</h1>
         <p>The most amazing list of adoptable pets at your fingertips. Updated fresh daily.
           <p />
         <div class="btn-container">
-          <a href="#" class="btn-primary">View Pets</a>
-          <a href="#" class="btn-outline">Manage Pets</a>
+          <a href="#" class="btn btn-primary">View Pets</a>
+          <a href="#" class="btn btn-outline">Manage Pets</a>
         </div>
       </div>
       <div class="right">
@@ -33,12 +33,12 @@
     </div>
   </div>
   <div class="container-bottom">
-  <div class="pets-section">
-    <h2>Meet Our Friends</h2>
-  </div>
-  <footer>
-    <p> © 2023 Fake Adoption Center. All rights reserved.</p>
-  </footer>
+    <div class="pets-section max-width padding-lg center">
+      <h2>Meet Our Friends</h2>
+    </div>
+    <footer class="max-width padding-sm center">
+      <p> © 2023 Fake Adoption Center. All rights reserved.</p>
+    </footer>
   </div>
 
 </body>
