fix: corrected the max width and color for each section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 
 <body>
-  <div class="container-top">
+  <!-- <nav></nav> -->
+
+  <section class="top">
     <div class="hero-section max-width padding-lg center">
       <div class="left">
         <h1>Find Your New Bestie</h1>
@@ -28,18 +30,22 @@
           <a href="#" class="btn btn-outline">Manage Pets</a>
         </div>
       </div>
-      <div class="right">
+      <div class="right
       </div>
     </div>
-  </div>
-  <div class="container-bottom">
+  </section>
+
+  <main class="middle">
     <div class="pets-section max-width padding-lg center">
       <h2>Meet Our Friends</h2>
     </div>
-    <footer class="max-width padding-sm center">
+  </main>
+
+  <footer class="bottom">
+    <div class="max-width padding-sm center">
       <p> © 2023 Fake Adoption Center. All rights reserved.</p>
-    </footer>
-  </div>
+    </div>
+  </footer>
 
 </body>
 
