fix: corrected the max width and color for each section

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-  <!-- <nav></nav> -->
+  <nav></nav>
 
-  <section class="top">
+  <section class="top" aria-labelledby="hero-heading">
     <div class="hero-section max-width padding-lg center">
       <div class="left">
         <h1>Find Your New Bestie</h1>
@@ -30,7 +30,7 @@
           <a href="#" class="btn btn-outline">Manage Pets</a>
         </div>
       </div>
-      <div class="right
+      <div class="right">
       </div>
     </div>
   </section>
