fix: corrected the max width and color for each section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <footer class="bottom">
     <div class="max-width padding-sm center">
-      <p> © 2023 Fake Adoption Center. All rights reserved.</p>
+      <p> © 2023 Faux Adoption Center . All rights reserved.</p>
     </div>
   </footer>
 
