fix: fixed duplicate css variables

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <div class="right">
       </div>
     </div>
+    <div class="call-out-section max-width padding-lg center">
+      <p>4 call out cards here</p>
+    </div>
   </section>
 
   <main class="middle">
