feat: started working on cards

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <nav></nav>
 
-  <section class="top" aria-labelledby="hero-heading">
+  <section class="top">
     <div class="hero-section max-width padding-lg center">
       <div class="left">
         <h1>Find Your New Bestie</h1>
@@ -33,8 +33,28 @@
       <div class="right">
       </div>
     </div>
-    <div class="call-out-section max-width padding-lg center">
-      <p>4 call out cards here</p>
+    <div class="call-out-section max-width padding-md center">
+      <div class="card">
+        <img src="./images/sun-icon.svg" alt="sun icon">
+        <h4>Sunny Play</h4>
+        <p>Our center is located in beautiful Miami, and it’s currently 84°F at our pet playground.</p>
+      </div>
+      <div class="card">
+        <img src="./images/emoji.svg" alt="emoji icon">
+        <h4>Dedicated Staff</h4>
+        <p>Our center has over 70 volunteers who play with the pets four times daily.</p>
+      </div>
+      <div class="card">
+        <img src="./images/trophy.svg" alt="trophy icon">
+        <h4>Voted #1</h4>
+        <p>For the last five years we’ve consistently been voted the #1 pet adoption center in the state.</p>
+      </div>
+      <div class="card">
+        <img src="./images/moon.svg" alt="moon icon">
+        <h4>Nightly</h4>
+        <p>Every night our staff leads a yoga session and the animals are free to roam around and relax around people.
+        </p>
+      </div>
     </div>
   </section>
 
