feat: completed the cards call out section

--- a/index.html
+++ b/index.html
@@ -33,29 +33,44 @@
       <div class="right">
       </div>
     </div>
+
     <div class="call-out-section max-width padding-md center">
+
       <div class="card">
         <img src="./images/sun-icon.svg" alt="sun icon">
-        <h4>Sunny Play</h4>
-        <p>Our center is located in beautiful Miami, and it’s currently 84°F at our pet playground.</p>
+        <div class="card-details">
+          <h3>Sunny Play</h3>
+          <p>Our center is located in beautiful Miami, and it’s currently 84°F at our pet playground.</p>
+        </div>
       </div>
+
       <div class="card">
         <img src="./images/emoji.svg" alt="emoji icon">
-        <h4>Dedicated Staff</h4>
-        <p>Our center has over 70 volunteers who play with the pets four times daily.</p>
+        <div class="card-details">
+          <h3>Dedicated Staff</h3>
+          <p>Our center has over 70 volunteers who play with the pets four times daily.</p>
+        </div>
       </div>
+
       <div class="card">
         <img src="./images/trophy.svg" alt="trophy icon">
-        <h4>Voted #1</h4>
-        <p>For the last five years we’ve consistently been voted the #1 pet adoption center in the state.</p>
+        <div class="card-details">
+          <h3>Voted #1</h3>
+          <p>For the last five years we’ve consistently been voted the #1 pet adoption center in the state.</p>
+        </div>
       </div>
+
       <div class="card">
         <img src="./images/moon.svg" alt="moon icon">
-        <h4>Nightly</h4>
-        <p>Every night our staff leads a yoga session and the animals are free to roam around and relax around people.
-        </p>
+        <div class="card-details">
+          <h3>Nightly</h3>
+          <p>Every night our staff leads a yoga session and the animals are free to roam around and relax around people.
+          </p>
+        </div>
       </div>
+
     </div>
+
   </section>
 
   <main class="middle">
