--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <div class="card">
         <img src="./images/sun-icon.svg" alt="sun icon">
-        <div class="card-details">
+        <div class="intro-features">
           <h3>Sunny Play</h3>
           <p>Our center is located in beautiful Miami, and it’s currently 84°F at our pet playground.</p>
         </div>
@@ -46,7 +46,7 @@
 
       <div class="card">
         <img src="./images/emoji.svg" alt="emoji icon">
-        <div class="card-details">
+        <div class="intro-features">
           <h3>Dedicated Staff</h3>
           <p>Our center has over 70 volunteers who play with the pets four times daily.</p>
         </div>
@@ -54,7 +54,7 @@
 
       <div class="card">
         <img src="./images/trophy.svg" alt="trophy icon">
-        <div class="card-details">
+        <div class="intro-features">
           <h3>Voted #1</h3>
           <p>For the last five years we’ve consistently been voted the #1 pet adoption center in the state.</p>
         </div>
@@ -62,7 +62,7 @@
 
       <div class="card">
         <img src="./images/moon.svg" alt="moon icon">
-        <div class="card-details">
+        <div class="intro-features">
           <h3>Nightly</h3>
           <p>Every night our staff leads a yoga session and the animals are free to roam around and relax around people.
           </p>
