feat: added some transparent circle embelishments

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <nav></nav>
 
   <section class="top">
+
+    <!-- embelishment circle -->
+    <div class="circle blue-bg"></div>
+
     <div class="hero-section max-width padding-lg center">
       <div class="left">
         <h1>Find Your New Bestie</h1>
@@ -33,6 +37,9 @@
       <div class="right">
       </div>
     </div>
+
+    <!-- embelishment circle -->
+    <div class="circle pink-bg"></div>
 
     <div class="call-out-section max-width padding-md center">
 
