feat: added decorative circles on the hero section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section class="top">
 
     <!-- embelishment circle -->
-    <div class="circle blue-bg"></div>
+    <div class="circle blue-circle" aria-hidden="true"></div>
 
     <div class="hero-section max-width padding-lg center">
       <div class="left">
@@ -39,7 +39,7 @@
     </div>
 
     <!-- embelishment circle -->
-    <div class="circle pink-bg"></div>
+    <div class="circle pink-circle" aria-hidden="true"></div>
 
     <div class="call-out-section max-width padding-md center">
 
