fix: made the decorative circles position relative the max width of the containing hero section

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
 <body>
   <nav></nav>
 
-  <section class="top">
+  <section class="top relative">
 
-    <!-- embelishment circle -->
-    <div class="circle blue-circle" aria-hidden="true"></div>
+    <div class="hero-section relative-max-width padding-lg center">
+      <!-- embelishment circle -->
+      <div class="circle blue-circle" aria-hidden="true"></div>
 
-    <div class="hero-section max-width padding-lg center">
+      <!-- embelishment circle -->
+      <div class="circle pink-circle" aria-hidden="true"></div>
+
       <div class="left">
         <h1>Find Your New Bestie</h1>
         <p>The most amazing list of adoptable pets at your fingertips. Updated fresh daily.
@@ -38,8 +41,6 @@
       </div>
     </div>
 
-    <!-- embelishment circle -->
-    <div class="circle pink-circle" aria-hidden="true"></div>
 
     <div class="call-out-section max-width padding-md center">
 
