fix: adjusted the call out section's positioning

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
   <nav></nav>
 
-  <section class="top relative">
+  <section class="top">
 
-    <div class="hero-section relative-max-width padding-lg center">
+    <div class="hero-section relative-max-width padding-md center">
       <!-- embelishment circle -->
       <div class="circle blue-circle" aria-hidden="true"></div>
 
@@ -42,7 +42,7 @@
     </div>
 
 
-    <div class="call-out-section max-width padding-md center">
+    <div class="call-out-section max-width padding-lg center">
 
       <div class="card">
         <img src="./images/sun-icon.svg" alt="sun icon">
