fix: adjusted the call out section's positioning

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
 
-    <div class="call-out-section max-width padding-lg center">
+    <div class="call-out-section max-width padding-md center">
 
       <div class="card">
         <img src="./images/sun-icon.svg" alt="sun icon">
