feat: started initial changes for the pets section

--- a/index.html
+++ b/index.html
@@ -84,12 +84,20 @@
   <main class="middle">
     <div class="pets-section max-width padding-lg center">
       <h2>Meet Our Friends</h2>
+      <div class="filter-container">
+        <p>Show me:</p>
+        <div>
+          <button>All Pets</button></li>
+          <button>Only Dogs</button></li>
+          <button>Only Cats</button></li>
+        </div>
+      </div>
     </div>
   </main>
 
   <footer class="bottom">
     <div class="max-width padding-sm center">
-      <p> © 2024 Faux Adoption Center . All rights reserved.</p>
+      <p> &copy; 2024 Faux Adoption Center . All rights reserved.</p>
     </div>
   </footer>
 
