feat: added pet cards

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="hero-section relative-max-width padding-md center">
       <!-- embelishment circle -->
       <div class="circle blue-circle" aria-hidden="true"></div>
+      <!-- <img src="./images/Ellipse_blue.svg" alt="decorative ellipse" aria-hidden="true"> -->
 
       <!-- embelishment circle -->
       <div class="circle pink-circle" aria-hidden="true"></div>
@@ -86,10 +87,47 @@
       <h2>Meet Our Friends</h2>
       <div class="filter-container">
         <p>Show me:</p>
-        <div>
-          <button>All Pets</button></li>
+        <div class="filter-buttons-wrapper">
+          <button class="active">All Pets</button></li>
           <button>Only Dogs</button></li>
           <button>Only Cats</button></li>
+        </div>
+      </div>
+
+      <div class="pet-cards-container">
+        <div class="pet-card">
+          <img src="./images/dog1.jpg" alt="">
+          <div class="pet-details-container">
+            <h3>Barksalot</h3>
+            <p>Barksalot is a sweet and lovable 3 year old ball of fluff. He loves carrots, celery, and playing fetch.
+            </p>
+            <p>2 years old</p>
+          </div>
+        </div>
+        <div class="pet-card">
+          <img src="./images/dog2.jpg" alt="">
+          <div class="pet-details-container">
+            <h3>Woof</h3>
+            <p>Woof is a very talkative and sweet pup. She loves beets, plums, cuddles and jumping over low fences.</p>
+            <p>Less than a year old</p>
+          </div>
+        </div>
+        <div class="pet-card">
+          <img src="./images/cat1.jpg" alt="">
+          <div class="pet-details-container">
+            <h3>Meowsalot</h3>
+            <p>Meowsalot is the most talkative cat we’ve ever come across. Constant meowing, chirping and purring!</p>
+            <p>1 year old</p>
+          </div>
+        </div>
+        <div class="pet-card">
+          <img src="./images/cat2.jpg" alt="">
+          <div class="pet-details-container">
+            <h3>Purrsloud</h3>
+            <p>Purrsloud has the loudest and most relaxing purr that’s come through our center. Come hear it yourself.
+            </p>
+            <p>4 years old</p>
+          </div>
         </div>
       </div>
     </div>
