fix: changed the gray texts to come out from the dark blue of the background so that it's easier on the eyes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h3>Barksalot</h3>
             <p>Barksalot is a sweet and lovable 3 year old ball of fluff. He loves carrots, celery, and playing fetch.
             </p>
-            <p>2 years old</p>
+            <span>2 years old</span>
           </div>
         </div>
         <div class="pet-card">
@@ -109,7 +109,7 @@
           <div class="pet-details-container">
             <h3>Woof</h3>
             <p>Woof is a very talkative and sweet pup. She loves beets, plums, cuddles and jumping over low fences.</p>
-            <p>Less than a year old</p>
+            <span>Less than a year old</span>
           </div>
         </div>
         <div class="pet-card">
@@ -117,7 +117,7 @@
           <div class="pet-details-container">
             <h3>Meowsalot</h3>
             <p>Meowsalot is the most talkative cat we’ve ever come across. Constant meowing, chirping and purring!</p>
-            <p>1 year old</p>
+            <span>1 year old</span>
           </div>
         </div>
         <div class="pet-card">
@@ -126,7 +126,7 @@
             <h3>Purrsloud</h3>
             <p>Purrsloud has the loudest and most relaxing purr that’s come through our center. Come hear it yourself.
             </p>
-            <p>4 years old</p>
+            <span>4 years old</span>
           </div>
         </div>
       </div>
