--- a/index.html
+++ b/index.html
@@ -96,38 +96,38 @@
 
       <div class="pet-cards-container">
         <div class="pet-card">
-          <img src="./images/dog1.jpg" alt="">
           <div class="pet-details-container">
             <h3>Barksalot</h3>
             <p>Barksalot is a sweet and lovable 3 year old ball of fluff. He loves carrots, celery, and playing fetch.
             </p>
             <span>2 years old</span>
           </div>
+          <img src="./images/dog1.jpg" alt="A white fluffy dog that's named Barksalot">
         </div>
         <div class="pet-card">
-          <img src="./images/dog2.jpg" alt="">
           <div class="pet-details-container">
             <h3>Woof</h3>
             <p>Woof is a very talkative and sweet pup. She loves beets, plums, cuddles and jumping over low fences.</p>
             <span>Less than a year old</span>
           </div>
+          <img src="./images/dog2.jpg" alt="A white and brown fur patterned dog that’s named Woof">
         </div>
         <div class="pet-card">
-          <img src="./images/cat1.jpg" alt="">
           <div class="pet-details-container">
             <h3>Meowsalot</h3>
             <p>Meowsalot is the most talkative cat we’ve ever come across. Constant meowing, chirping and purring!</p>
             <span>1 year old</span>
           </div>
+          <img src="./images/cat1.jpg" alt="A white cat with black patterns that's named Meowsalot">
         </div>
         <div class="pet-card">
-          <img src="./images/cat2.jpg" alt="">
           <div class="pet-details-container">
             <h3>Purrsloud</h3>
             <p>Purrsloud has the loudest and most relaxing purr that’s come through our center. Come hear it yourself.
             </p>
             <span>4 years old</span>
           </div>
+          <img src="./images/cat2.jpg" alt="A gray cat that’s named Purrsloud">
         </div>
       </div>
     </div>
