feat: created media queries for mobile views

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
   </main>
 
   <footer class="bottom">
-    <div class="max-width padding-sm center">
-      <p> &copy; 2024 Faux Adoption Center . All rights reserved.</p>
+    <div class="footer-section max-width padding-sm center">
+      <p> &copy; 2024 Faux Adoption Center. All rights reserved.</p>
     </div>
   </footer>
 
